<resources>
    <string name="app_name">LoadApp-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="action_button">View details</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="channel_id">download_channel</string>
    <string name="channel_name">Downloads</string>
    <string name="notification_channel_description">Download reminder</string>

    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_name">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="select_one">Please select the file to download</string>
    <string name="load">LoadApp</string>
    <string name="glide">Glide</string>
    <string name="retrofit">Retrofit</string>
    <string name="load_app_description">Current repository by Udacity</string>
    <string name="glide_description">Image Loading Library by BumpTech</string>
    <string name="retrofit_description">Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="unknown">Unknown</string>
    <string name="ok">OK</string>
    <string name="file_name">File Name:</string>
    <string name="master_zip">master.zip</string>
    <string name="status">Status:</string>

    <string name="key_file_name">fileName</string>
    <string name="key_description">fileDescription</string>
    <string name="key_status">status</string>
    <string name="file_description">description</string>


</resources>
