<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_cloud"
        android:scaleType="fitCenter"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/downloadGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/custom_button">

        <RadioButton
            android:id="@+id/glideRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:text="@string/glide_radio_text" />

        <RadioButton
            android:id="@+id/loadRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:text="@string/load_app_radio_text" />

        <RadioButton
            android:id="@+id/retrofitRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:text="@string/retrofit_radio_name" />
    </RadioGroup>

<!--    <com.udacity.LoadingButton-->
<!--        android:id="@+id/custom_button"-->
<!--        android:layout_width="0dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_margin="20dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <Button
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="download"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>